feat(entity): add bulk update of entities
