# src/entity/models/entity.ts
@@ -2,6 +2,8 @@ import { ActionType, EntityStatus } from '../../common/enums';
 
 export type UpdateEntity = Omit<Partial<Entity>, 'entityId' | 'fileId'>;
 
+export type UpdateEntities = (UpdateEntity & { entityId: string })[];
+
 export interface Entity {
   entityId: string;
 
